[package]
name = "juice_box"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"

# Remove dynamic linking before release!!!
bevy = { version = "0.12.0", features = ["dynamic_linking"] }

thiserror = "1.0.50"
bevy_egui = "0.24.0"
winit = "0.28"
image = "0.24"


# Required with Bevy/wgpu to use Cargo Workspaces.
[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


# See more keys and also their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html