[package]
name = "juice_box"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"

# Remove dynamic linking before release!!!
bevy = { version = "0.12.0" }

thiserror = "1.0.50"
bevy_egui = "0.24.0"
bevy_asset = "0.12.1"
winit = "0.28"
image = "0.24.9"
bevy_save = "0.13.0"
rfd = "0.14.1"
serde = "1.0.197"


# Required with Bevy/wgpu to use Cargo Workspaces.
[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


# See more keys and also their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html